--- a/docker/release/base/Dockerfile.in
+++ b/docker/release/base/Dockerfile.in
@@ -1,8 +1,19 @@
-FROM fedora:37 AS keylime_base
+FROM alibaba-cloud-linux-3-registry.cn-hangzhou.cr.aliyuncs.com/alinux3/alinux3 AS keylime_base
 LABEL version="_version_" description="Keylime Base - Only used as an base image for derived packages"
 MAINTAINER Keylime Team <main@keylime.groups.io>
 
-RUN dnf -y install dnf-plugins-core git efivar-libs efivar-devel && dnf -y builddep tpm2-tools 
+RUN dnf -y install dnf-plugins-core git efivar-libs
+RUN dnf install -y git wget patch libyaml openssl-devel libtool make automake m4 libgcrypt-devel autoconf libcurl-devel libstdc++-devel dbus-devel libuuid-devel json-c-devel autoconf-archive
+RUN git clone https://github.com/tpm2-software/tpm2-tss.git tpm2-tss && \
+    cd tpm2-tss && \
+    yum install -y  m4 libtool automake autoconf autoconf-archive && \
+    ./bootstrap && \
+    yum install -y openssl-devel json-c-devel libcurl-devel libuuid-devel && \
+    ./configure --prefix=/usr && \
+    make && \
+    make install && \
+    cd .. && rm -rf tpm2-tss
+
 RUN git clone -b 5.5 https://github.com/tpm2-software/tpm2-tools.git && \
     cd tpm2-tools && \
     git config user.email "main@keylime.groups.io" && \
@@ -14,6 +25,7 @@ RUN git clone -b 5.5 https://github.com/tpm2-software/tpm2-tools.git && \
     cd .. && rm -rf tpm2-tools
 
 ENV GOPATH=/root/go
+RUN yum install -y python3-pip
 RUN --mount=target=/keylime,type=bind,source=.,rw \
     cd /keylime && ./installer.sh -o && \
     dnf -y install python3-PyMySQL
